Conversion de los componentes a HTML

--- a/JCUP_JFLEX/Ejemplos indigo/ejemplos html/componentes.html
+++ b/JCUP_JFLEX/Ejemplos indigo/ejemplos html/componentes.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <form action="">
+        <div>
+            
+        </div>
         <label for="" ></label>
         <input type="file" id="" src="url" name=""/>
     </form>
